Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
@@ -15,14 +15,14 @@
    "id": "a0142f66-cffc-4adc-b457-463814271b20",
    "metadata": {},
    "source": [
-    "# sqlite3\n",
+    "## sqlite3\n",
     "\n",
     "Resource: https://docs.python.org/3/library/sqlite3.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "50f2dce8-c58a-4c10-a6f3-bfc3589413cb",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7f4b7f3e-6e76-4477-943b-6bf986536dbe",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f1a9de0-b729-49ab-be96-8901d6350d98",
    "metadata": {},
    "outputs": [],
@@ -54,42 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cacc6d7b-bafe-4b32-a934-a051c65f44f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7fdc204c0bc0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur.execute(\"CREATE TABLE movie(title, year, score)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "41ad59a9-f965-4612-a445-7d61f3208691",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('movie',)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Result\n",
     "res = cur.execute(\"SELECT name FROM sqlite_master\")\n",
@@ -98,21 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d96594e-fa72-4f81-8753-8f3ecb75aaf9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# None\n",
     "# Result\n",
@@ -122,21 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1c3c383e-8d92-4fba-a265-9133abdd0842",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7fdc204c0bc0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add two rows\n",
     "cur.execute(\"\"\"\n",
@@ -148,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b49ebf01-812d-4bb7-b23e-e9563499895e",
    "metadata": {},
    "outputs": [],
@@ -159,21 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "05447e6f-ed83-4b2c-ac64-a22093eb4fd0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9,)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Result\n",
     "res = cur.execute(\"SELECT score FROM movie\")\n",
@@ -205,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "35b5c2d7-3531-475c-aa65-e92f2e8fe939",
    "metadata": {},
    "outputs": [],
@@ -220,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "856650d3-b600-4817-86d9-3fcddee3625b",
    "metadata": {},
    "outputs": [],
@@ -231,27 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "10ca76ec-1cdc-433f-a090-60bb1b72f3c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2022, 'Movie 4')\n",
-      "(2022, 'Movie 5')\n",
-      "(2022, 'Movie 6')\n",
-      "(2022, 'Movie 4')\n",
-      "(2022, 'Movie 5')\n",
-      "(2022, 'Movie 6')\n",
-      "(2023, 'MOVIE 1')\n",
-      "(2023, 'MOVIE 2')\n",
-      "(2023, 'MOVIE 3')\n",
-      "(2023, 'MOVIE 4')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Veriy new rows\n",
     "for row in cur.execute(\"\"\"\n",
@@ -264,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1f3ccd0d-dca3-48a3-9742-da32f0ac0240",
    "metadata": {},
    "outputs": [],
@@ -275,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "606187f4-c1e7-4b70-af84-13eda37ff77c",
    "metadata": {},
    "outputs": [],
@@ -287,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c1a6e321-5c22-41a9-8fa3-9eeb9af19261",
    "metadata": {},
    "outputs": [],
@@ -300,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "8055171f-9558-4cc8-9f16-16da57a2072b",
    "metadata": {},
    "outputs": [],
@@ -310,26 +238,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "772cf292-267b-4ecb-adf3-5066c160d5b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The highest score is 'MOVIE 2', released in 2023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'The highest score is {title!r}, released in {year}')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6090ef9a-45c7-4618-a7fa-8fbe1b5a8d78",
+   "metadata": {},
+   "source": [
+    "## Notepad (sqlite3 and streamlit)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bae85a6-ed40-4cfa-a515-affe5f3ac45c",
+   "id": "0c6c5a85-74ef-4595-a9bb-4fd265944089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install streamlit\n",
+    "!pip install streamlit -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d527e45-e4ab-4694-9908-8a3da23f98a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import sqlite3\n",
+    "import streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae4cdfe9-9b3c-4170-8134-26d6379af672",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a folder\n",
+    "import os\n",
+    "dir_name = \"app\"\n",
+    "if dir_name in os.listdir():\n",
+    "    print(\"Directory is already created.\")\n",
+    "else:\n",
+    "    os.mkdir(dir_name)\n",
+    "    print(\"Successfully created.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f371a0-916e-490b-94e1-33fe6a5917c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change directory\n",
+    "os.chdir(dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b1749ac-22b8-4f20-8350-fb98c300b096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print working directory\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07eb6ad4-353e-4f5c-b8d4-8e0610d9e2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile app.py\n",
+    "# Simple Streamlit App Docker Python\n",
+    "import streamlit as st\n",
+    "st.text(\"It's working.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "666a6dda-db11-4e55-b57d-3dde91624c02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile Dockerfile\n",
+    "FROM python\n",
+    "WORKDIR /app\n",
+    "RUN pip install streamlit -q\n",
+    "COPY app.py .\n",
+    "EXPOSE 8501\n",
+    "CMD [\"streamlit\", \"run\", \"app.py\", \"--server.address\", \"0.0.0.0\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e051ee-7e11-4eae-bfe6-483b60123214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build an image\n",
+    "!docker build -t simple-notepad-app . -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44ac541d-d09b-4406-a5f8-7571c4df91dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List images\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c909f486-7dd2-4a06-892f-9bb8e06f15c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run the app in detached mode\n",
+    "!docker run -d -p 8501:8501 -v $(pwd):/app simple-notepad-app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7810934a-4510-4b76-bcbe-d41ad8ad75d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0797a1cf-c0b0-4818-b6a8-6ae1879422bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove all docker ps\n",
+    "# !docker rm -f $(docker ps -aq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b952140d-36bb-42d6-9226-dcce9afb3ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a firewall (GCP)\n",
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:8501,tcp:8000,tcp:9000 --source-ranges=0.0.0.0/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbfb85e2-1a9b-4459-835e-c1a53b16a45c",
    "metadata": {},
    "outputs": [],
    "source": []
