Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
@@ -317,16 +317,90 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07eb6ad4-353e-4f5c-b8d4-8e0610d9e2d7",
+   "cell_type": "raw",
+   "id": "e6d09ce9-3080-428e-ae79-e0179b9ba5bd",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Simple Streamlit App Docker Python\n",
     "import streamlit as st\n",
-    "st.text(\"It's working.\")"
+    "st.subheader(\"Simple Notepad :notebook:\")\n",
+    "st.caption(\"Add your thoughts here! It will be stored in a database!\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "name = st.text_input(\"Your Name here\")\n",
+    "note = st.text_area(\"Add Note here\")\n",
+    "if st.button(\"Add a note\"):\n",
+    "    st.write(name,\":\", note)\n",
+    "    st.balloons()\n",
+    "    \n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "st.write(\"**Previous Notes**\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd901067-1238-4adf-8d99-b41738085772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import sqlite3\n",
+    "import os\n",
+    "\n",
+    "# Header\n",
+    "st.subheader(\"Simple Notepad :notebook:\")\n",
+    "st.caption(\"\"\"\n",
+    "            Add your thoughts here! It will be stored in a database! \\n\n",
+    "            :warning: :red[Do not add sensitive data].\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "# Variable\n",
+    "database_name = \"notes.db\"\n",
+    "con = sqlite3.connect(database_name)\n",
+    "cur = con.cursor()\n",
+    "\n",
+    "# Create a database\n",
+    "if database_name in os.listdir():\n",
+    "    pass\n",
+    "else:\n",
+    "    con = sqlite3.connect(database_name)\n",
+    "    # Database Cursor (cur)\n",
+    "    cur = con.cursor()\n",
+    "    cur.execute(\"CREATE TABLE notes(name, note)\")\n",
+    "\n",
+    "# Inputs\n",
+    "name = st.text_input(\"Your Name here\")\n",
+    "note = st.text_area(\"Add Note here\")\n",
+    "if st.button(\"Add a note\"):\n",
+    "    st.write(name,\":\", note)\n",
+    "    st.success(\"Successful Added.\")\n",
+    "    # st.balloons()\n",
+    "    ### Insert into adatabase\n",
+    "    cur.execute(f\"\"\"\n",
+    "            INSERT INTO notes VALUES\n",
+    "            (\"{name}\", \"{note}\")\n",
+    "            \"\"\")\n",
+    "    con.commit()\n",
+    "    \n",
+    "# Previous Notes \n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "st.write(\"**Previous Notes**\")\n",
+    "# Write the data\n",
+    "result = cur.execute(\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM notes\n",
+    "                    ORDER BY name DESC\n",
+    "                    \"\"\")\n",
+    "for name, note in result.fetchall():\n",
+    "    st.write(name,\":\", note)\n",
+    "    \n",
+    "# Close Connection\n",
+    "con.close()"
    ]
   },
   {
