Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
@@ -339,11 +339,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd901067-1238-4adf-8d99-b41738085772",
+   "cell_type": "raw",
+   "id": "a43c69bc-84b7-4c83-9ff1-e82995d2987b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%writefile app.py\n",
     "# Import libraries\n",
@@ -361,17 +359,17 @@
     "\n",
     "# Variable\n",
     "database_name = \"notes.db\"\n",
-    "con = sqlite3.connect(database_name)\n",
-    "cur = con.cursor()\n",
     "\n",
     "# Create a database\n",
     "if database_name in os.listdir():\n",
-    "    pass\n",
+    "    con = sqlite3.connect(database_name)\n",
+    "    cur = con.cursor()\n",
     "else:\n",
     "    con = sqlite3.connect(database_name)\n",
     "    # Database Cursor (cur)\n",
     "    cur = con.cursor()\n",
     "    cur.execute(\"CREATE TABLE notes(name, note)\")\n",
+    "    con.commit()\n",
     "\n",
     "# Inputs\n",
     "name = st.text_input(\"Your Name here\")\n",
