Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/sql-py.ipynb
@@ -402,6 +402,78 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "d754d39e-7041-4c14-a44b-b33d79a4b93e",
+   "metadata": {},
+   "source": [
+    "%%writefile app.py\n",
+    "# Import libraries\n",
+    "import streamlit as st\n",
+    "import sqlite3\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "# Header\n",
+    "st.subheader(\"Simple Notepad :notebook:\")\n",
+    "st.caption(\"\"\"\n",
+    "            Add your thoughts here! It will be stored in a database! \\n\n",
+    "            :warning: :red[Do not add sensitive data].\n",
+    "            \"\"\")\n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "\n",
+    "# Variable\n",
+    "database_name = \"notes.db\"\n",
+    "\n",
+    "# Create a database\n",
+    "if database_name in os.listdir():\n",
+    "    con = sqlite3.connect(database_name)\n",
+    "    cur = con.cursor()\n",
+    "else:\n",
+    "    con = sqlite3.connect(database_name)\n",
+    "    # Database Cursor (cur)\n",
+    "    cur = con.cursor()\n",
+    "    cur.execute(\"CREATE TABLE notes(name, note, time)\")\n",
+    "    con.commit()\n",
+    "\n",
+    "# Inputs\n",
+    "name = st.text_input(\"Your Name here\")\n",
+    "note = st.text_area(\"Add Note here\")\n",
+    "if st.button(\"Add a note\"):\n",
+    "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ### :pencil: {note} \\n\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "    st.success(\"Successful Added.\")\n",
+    "    # st.balloons()\n",
+    "    ### Insert into adatabase\n",
+    "    cur.execute(f\"\"\"\n",
+    "            INSERT INTO notes VALUES\n",
+    "            (\"{name}\", \"{note}\", \"{time}\")\n",
+    "            \"\"\")\n",
+    "    con.commit()\n",
+    "    \n",
+    "# Previous Notes \n",
+    "st.subheader(\"\",divider=\"rainbow\")\n",
+    "st.write(\"## *Previous Notes*\")\n",
+    "# Write the data\n",
+    "result = cur.execute(\"\"\"\n",
+    "                    SELECT * \n",
+    "                    FROM notes\n",
+    "                    ORDER BY time DESC\n",
+    "                    \"\"\")\n",
+    "for name, note, time in result.fetchall():\n",
+    "    st.write(f\"\"\" \\n\n",
+    "            ### :pencil: {note} \\n\n",
+    "            :man: {name} \\n\n",
+    "            :watch: {time}\"\"\")\n",
+    "    st.subheader(\"\",divider=\"gray\")\n",
+    "    \n",
+    "# Close Connection\n",
+    "con.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "666a6dda-db11-4e55-b57d-3dde91624c02",
