Add and modify files

--- a/12-App/Notepad-App-with-External-DB/Notepad-App-with-External-DB.ipynb
+++ b/12-App/Notepad-App-with-External-DB/Notepad-App-with-External-DB.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9d04611c-b599-4c36-b99b-da53bf6c69c8",
+   "id": "daa412b9-4447-4960-921d-224a1f2b35ca",
    "metadata": {},
    "source": [
-    "# Notepad App"
+    "# Notepad App with External DB"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f3acd3-6586-4f04-947f-48cc87e661da",
+   "id": "f2274eb8-5c91-4e18-811a-fba065a0cf94",
    "metadata": {},
    "outputs": [],
    "source": []
