--- a/12-App/Notepad-App/Notepad App.ipynb
+++ b/12-App/Notepad-App/Notepad App.ipynb
@@ -276,7 +276,7 @@
     "import time\n",
     "\n",
     "# Header\n",
-    "st.subheader(\"Simple Notepad :notebook:\")\n",
+    "st.write(\"# Notepad :notebook:\")\n",
     "st.caption(\"\"\"\n",
     "            Add your thoughts here! It will be stored in a database! \\n\n",
     "            :warning: :red[Do not add sensitive data].\n",
@@ -299,7 +299,7 @@
     "\n",
     "# Inputs\n",
     "name = st.text_input(\"Your Name here\")\n",
-    "note = st.text_area(\"Add Note here\")\n",
+    "note = st.text_area(\"Add Note here\",)\n",
     "if st.button(\"Add a note\"):\n",
     "    time = time.strftime(\"Date: %Y-%m-%d | Time: %H:%M:%S UTC\")\n",
     "    st.write(f\"\"\" \\n\n",
@@ -317,7 +317,7 @@
     "    \n",
     "# Previous Notes \n",
     "st.subheader(\"\",divider=\"rainbow\")\n",
-    "st.write(\"## *Previous Notes*\")\n",
+    "st.write(\"### *Previous Notes*\")\n",
     "# Write the data\n",
     "result = cur.execute(\"\"\"\n",
     "                    SELECT * \n",
@@ -326,8 +326,8 @@
     "                    \"\"\")\n",
     "for name, note, time in result.fetchall():\n",
     "    st.write(f\"\"\" \\n\n",
-    "            ### :pencil: {note} \\n\n",
-    "            :man: {name} \\n\n",
+    "            #### :pencil: {note} \\n\n",
+    "            :man: Written By: **{name}** \\n\n",
     "            :watch: {time}\"\"\")\n",
     "    st.subheader(\"\",divider=\"gray\")\n",
     "    \n",
@@ -416,6 +416,14 @@
     "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
     "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:8501,tcp:8000,tcp:9000 --source-ranges=0.0.0.0/0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dc3f3ee-d756-4e7a-b22f-21ae22b18fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
