Add and modify files

--- a/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
+++ b/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
@@ -15,13 +15,46 @@
    "id": "fb347a36-67bb-42b0-9877-c100c88fba0d",
    "metadata": {},
    "source": [
-    "## Install Minikubeand and start Minikube cluster"
+    "## Install Minikube and start Minikube cluster"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9cd2513d-9f37-4fde-ae7b-69f1cd39ce9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "## Install Minkinube\n",
+    "curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64\n",
+    "sudo install minikube-linux-amd64 /usr/local/bin/minikube\n",
+    "# Start Minikube\n",
+    "minikube start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5dc7823c-2311-4621-a58f-1e9043a1a124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf mi*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df39a489-ad5a-4e2e-8929-24ceb11137da",
+   "metadata": {},
+   "source": [
+    "## Kubernetes Manifest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea39f9a-12cb-4f2e-b618-8726125f032e",
    "metadata": {},
    "outputs": [],
    "source": []
