Add and modify files

--- a/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
+++ b/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
@@ -44,6 +44,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea39f9a-12cb-4f2e-b618-8726125f032e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!minikube status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd24bfa-398d-45a1-bcb1-0381665ca487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl cluster-info"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "df39a489-ad5a-4e2e-8929-24ceb11137da",
    "metadata": {},
@@ -54,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea39f9a-12cb-4f2e-b618-8726125f032e",
+   "id": "1cbb35f2-d9e6-4b61-8405-5b59085d4b43",
    "metadata": {},
    "outputs": [],
    "source": []
