Add and modify files

--- a/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
+++ b/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
@@ -72,9 +72,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc0aa68a-86f2-4b07-a653-16ae02a5cce3",
+   "metadata": {},
+   "source": [
+    "### Creating a Deployment\n",
+    "\n",
+    "Reference: https://kubernetes.io/docs/concepts/workloads/controllers/deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "aa331d1f-bbe3-447b-9e7a-7a76b39ee75e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing nginx-deployment.yaml\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile nginx-deployment.yaml\n",
+    "apiVersion: apps/v1\n",
+    "kind: Deployment\n",
+    "metadata:\n",
+    "  name: nginx-deployment\n",
+    "  labels: \n",
+    "    app: nginx\n",
+    "spec:\n",
+    "  replicas: 3\n",
+    "  selector: \n",
+    "    matchLabels:\n",
+    "      app: nginx\n",
+    "  template:\n",
+    "    metadata: \n",
+    "      labels:\n",
+    "        app: nginx\n",
+    "    spec:\n",
+    "      containers:\n",
+    "      - name: nginx\n",
+    "        image: nginx:1.14.2\n",
+    "        ports:\n",
+    "        - containerPort: 80"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cbb35f2-d9e6-4b61-8405-5b59085d4b43",
+   "id": "ada10ae4-1de5-4b00-b8b7-fd7f067c41cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl apply -f nginx-deployment.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f010c4de-ef19-4812-a2b6-cf4f246d6f95",
    "metadata": {},
    "outputs": [],
    "source": []
