Add and modify files

--- a/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
+++ b/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
@@ -83,18 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aa331d1f-bbe3-447b-9e7a-7a76b39ee75e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing nginx-deployment.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile nginx-deployment.yaml\n",
     "apiVersion: apps/v1\n",
@@ -127,6 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Apply deployment\n",
     "!kubectl apply -f nginx-deployment.yaml"
    ]
   },
@@ -136,7 +129,29 @@
    "id": "f010c4de-ef19-4812-a2b6-cf4f246d6f95",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " !kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a045bfa6-5c2d-4742-87b3-21fec349a5b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl expose deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d1a5b64-6464-4fa0-bf99-9d77bb930edf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl port-forward svc/nginx-deployment 8000:80 --address 0.0.0.0"
+   ]
   }
  ],
  "metadata": {
